controller/pkg/agentgateway/translator/testdata/routes/httproute-not-allowedkind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-mixed-route-kind-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: GRPCRoute
        namespaces:
          from: Same
      name: only-allow-grpc-routes
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-mixed-route-kind-gateway
      sectionName: only-allow-grpc-routes
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: test-service
          port: 80
          weight: 1

---
# Output
output: []
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: http-route
    namespace: default
  spec: null
  status:
    parents:
    - conditions:
      - lastTransitionTime: fake
        message: kind gateway.networking.k8s.io/v1, Kind=HTTPRoute is not allowed
        reason: NotAllowedByListeners
        status: "False"
        type: Accepted
      - lastTransitionTime: fake
        message: ""
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: agentgateway.dev/agentgateway
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: http-mixed-route-kind-gateway
        namespace: default
        sectionName: only-allow-grpc-routes
